[MATRIX-104] endpoint validation during model creation (#815)
* [MATRIX-104] endpoint validation during model creation

* test

* checkstyle